Correcion de errores ortograficos

--- a/html/calculo.html
+++ b/html/calculo.html
@@ -32,7 +32,7 @@
                 <ul id="navegar">
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/html/sociales.html">Sociales</a></li>
-                    <li><a href="/html/fisica.html">Fisica</a></li>
+                    <li><a href="/html/fisica.html">Física</a></li>
                     <li><a href="/html/programacion.html">Programación</a></li>
                     <li><a href="/html/calculo.html">Calculo</a></li>
                     <li><a href="/html/ingles.html">Ingles</a></li>
@@ -77,7 +77,7 @@
                 <br id="Seccion3" />
                 <br >
                 <br>
-                <h2 class="cuerpo__h2">Video complementario</h2>
+                <h2 class="cuerpo__h2">Videos complementarios</h2>
                 <video src="/videos/ODS 13_calculo1.mp4" class="imagenes" controls>Video1</video>
                 <video src="/videos/ODS6_calculo2.mp4" class="imagenes" controls>Video2 </video>
                 <p class="cuerpo__parrafo" id="parrafo3">
@@ -99,7 +99,7 @@
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#Seccion3">Video complemetario</a>
+                    <a href="#Seccion3">Videos complemetarios</a>
                 </li>
                 </li>
             </ol>
