--- a/html/fisica.html
+++ b/html/fisica.html
@@ -33,7 +33,7 @@
         <ul id="navegar">
           <li><a href="/index.html">Inicio</a></li>
           <li><a href="/html/sociales.html">Sociales</a></li>
-          <li><a href="/html/fisica.html">Fisica</a></li>
+          <li><a href="/html/fisica.html">Física</a></li>
           <li><a href="/html/programacion.html">Programación</a></li>
           <li><a href="/html/calculo.html">Calculo</a></li>
           <li><a href="/html/ingles.html">Ingles</a></li>
@@ -54,10 +54,10 @@
       <section>
         <img src="/imagenes/Desarrollo-sostenible-min_fisica1.jpg" class="imagenes" alt="" id="section__img--primera" />
         <p class="cuerpo__parrafo" id="parrafo1">
-          La fisica tiene un paples importante en el entendimiento de los problemas
-          relacionados con el cambio climático. El clima es un problema de fisica
-          estadistica del no equilibrio.
-          La fisica tambien juega un rol importante en la creación de soluciones tecnologías
+          La física tiene un papel importante en el entendimiento de los problemas
+          relacionados con el cambio climático. El clima es un problema de física
+          estadística del no equilibrio.
+          La física también juega un rol importante en la creación de soluciones tecnologías
           para alcanzar un desarrollo sustentable
         </p>
         <br id="Seccion2" />
@@ -71,13 +71,13 @@
           requieren adoptar para hacer frente a la situación de emergencia planetaria exige,
           obviamente, un cuidadoso análisis de los problemas y sus causas, pero es preciso
           dejar claro, desde un principio, que es posible poner freno al proceso de
-          degraduación, que se conocen las medidas correctoras y que está en nuestras
+          degradación, que se conocen las medidas correctoras y que está en nuestras
           manos contribuir a su puesta en práctica.
         </p>
         <br id="Seccion3" />
         <br />
         <br />
-        <h2 class="cuerpo__h2">Video complementario:</h2>
+        <h2 class="cuerpo__h2">Videos complementarios:</h2>
         <video src="/videos/ODS 14_fisica1.mp4" class="imagenes" controls>Video1</video>
         <video src="/videos/IGUALDAD DE GENERO ODS 5 _fisica2.mp4" class="imagenes" controls>Video2</video>
         <video src="/videos/ODS16 Paz, Justicia e instituciones sólidas_fisica3 .mp4" class="imagenes" controls></video>
@@ -101,7 +101,7 @@
         </li>
         <br />
         <li class="nav__ol--text">
-          <a href="#Seccion3">Video complementario</a>
+          <a href="#Seccion3">Videos complementarios</a>
         </li>
         </li>
       </ol>
