--- a/html/ingles.html
+++ b/html/ingles.html
@@ -32,7 +32,7 @@
                 <ul id="navegar">
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/html/sociales.html">Sociales</a></li>
-                    <li><a href="/html/fisica.html">Fisica</a></li>
+                    <li><a href="/html/fisica.html">Física</a></li>
                     <li><a href="/html/programacion.html">Programación</a></li>
                     <li><a href="/html/calculo.html">Calculo</a></li>
                     <li><a href="/html/ingles.html">Ingles</a></li>
@@ -71,7 +71,7 @@
                     <b>Use of clean or alternative energies.</b> Wind, solar, geothermal energy, among others,
                     constitute energy sources that generate a lower impact on the environment than hydroelectric plants.
                     <br>
-                    <b>Substitution of fossil fuels for biofuels.</b> Fossil fuels generate large CO2 emissions, which
+                    <b>Substitution of fossil fuels for bio fuels.</b> Fossil fuels generate large CO2 emissions, which
                     has an
                     impact on global warming. In addition, its way of obtaining it is very invasive and the recovery
                     time of fossil fuels is so high that it is considered a non-renewable resource and, therefore, it
