--- a/html/programacion.html
+++ b/html/programacion.html
@@ -32,7 +32,7 @@
                 <ul id="navegar">
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/html/sociales.html">Sociales</a></li>
-                    <li><a href="/html/fisica.html">Fisica</a></li>
+                    <li><a href="/html/fisica.html">Física</a></li>
                     <li><a href="/html/programacion.html">Programación</a></li>
                     <li><a href="/html/calculo.html">Calculo</a></li>
                     <li><a href="/html/ingles.html">Ingles</a></li>
@@ -68,14 +68,14 @@
                     El cumplimiento de la legislación medioambiental y el cumplimiento de las demandas del lobby verde
                     representan hoy grandes desafíos para las organizaciones. Con la implementación de un SGA su
                     organización puede convertir ese desafío en una oportunidad. La certificación en ISO 14001 o las
-                    normas relacionadas le ayuda a lograr ahorros reales de costos. Un SGA eficaz está basadoen un ciclo
+                    normas relacionadas le ayuda a lograr ahorros reales de costos. Un SGA eficaz está basado en un ciclo
                     de mejora continua, en el que las operaciones diarias de su negocio impulsan un mayor aumento de la
                     eficiencia.
                 </p>
                 <br id="Seccion3" />
                 <br />
                 <br />
-                <h2 class="cuerpo__h2">Video Complementario:</h2>
+                <h2 class="cuerpo__h2">Videos Complementarios:</h2>
                 <video src="/videos/ODS 3_programcion1.mp4" class="imagenes" controls>Video1</video>
                 <video src="/videos/ODS 10_programacion2.mp4" class="imagenes" controls>Video2</video>
                 <video src="/videos/programacion3.mp4" class="imagenes" controls>Video2</video>
