--- a/html/sociales.html
+++ b/html/sociales.html
@@ -32,7 +32,7 @@
                 <ul id="navegar">
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/html/sociales.html">Sociales</a></li>
-                    <li><a href="/html/fisica.html">Fisica</a></li>
+                    <li><a href="/html/fisica.html">Física</a></li>
                     <li><a href="/html/programacion.html">Programación</a></li>
                     <li><a href="/html/calculo.html">Calculo</a></li>
                     <li><a href="/html/ingles.html">Ingles</a></li>
@@ -55,8 +55,8 @@
                 <img src="/imagenes/responsabilidad_social.jpg" class="imagenes" alt="" id="section__img--primera" />
                 <p class="cuerpo__parrafo" id="parrafo1">
                     Este es el momento en que nos centramos a los aspectos sociales del crecimiento sostenible,
-                    examinamso las cuestiones que afectan directamente del crecimiento sostenible, examinamos las
-                    cuestiones que afectan directamente a las personas y las sociedad civil y que ayudan o perjudican el
+                    examinamos las cuestiones que afectan directamente del crecimiento sostenible, examinamos las
+                    cuestiones que afectan directamente a las personas y la sociedad civil y que ayudan o perjudican el
                     proceso de avance de la calidad de vida. Con especial atención a la responsabilidad social y al
                     urbanismo sostenible.
                 </p>
