--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul id="navegar">
           <li><a href="/index.html">Inicio</a></li>
           <li><a href="/html/sociales.html">Sociales</a></li>
-          <li><a href="/html/fisica.html">Fisica</a></li>
+          <li><a href="/html/fisica.html">Física</a></li>
           <li><a href="/html/programacion.html">Programación</a></li>
           <li><a href="/html/calculo.html">Calculo</a></li>
           <li><a href="/html/ingles.html">Ingles</a></li>
@@ -72,7 +72,7 @@
         <p class="cuerpo__parrafo" id="parrafo2">
           Homogeneidad y coherencia entre el crecimiento económico y material de la
           población y la explotación de los recursos naturales evitando comprometer la
-          vida en el planeta, sea de los seres humano como de la naturaleza y
+          vida en el planeta, sea de los seres humanos como de la naturaleza y
           biodiversidad en la Tierra.
           Un crecimiento que tome en cuenta el bienestar y necesidades de las
           generaciones presentes.
